# DummyVulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  Shimakaze.cpp  Shimakaze.h  compile.bat  helpers.cpp  helpers.h  uniform_buffer_object.h  vertex.h
models/: shimakazea.mtl
